Test/Good/ac/TEST.CONST.IDX.ac
CONST MON_INBUF $200;
CONST OFFSET	0;

FN PRINT_STRING(STR_PTR:2);

FN MAIN() {
   SET (MON_INBUF+OFFSET)[0,1]='O';
   SET (MON_INBUF+OFFSET)[1,1]='K';
   SET (MON_INBUF+OFFSET)[2,1]=$0D;
   SET (MON_INBUF+OFFSET)[3,1]=0;
   PRINT_STRING(MON_INBUF+OFFSET);
}

INCLUDE "IO";