Test/Error/ac/ERROR.DEREF.NON.LVALUE.ac
CONST X 0;

FN MAIN() {
  SET (@X)[0,1]=0;
}

